# substrate-node-template

./: .gitignore  Cargo.toml  README.md  customSpecRaw.json  metadata.json  myCustomSpec.json
node/: Cargo.toml
node/src/: service.rs
pallets/kitties/: Cargo.toml  README.md  lesson_2_homework.md  lesson_3_homework.md
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/ocw/: Cargo.toml  README.md
pallets/ocw/src/: lib.rs
pallets/poe/: Cargo.toml  README.md  lesson_1_homework.md  lesson_6_homework.md
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
